--- a/myspringcloud/my-spring-cloud-api/pom.xml
+++ b/myspringcloud/my-spring-cloud-api/pom.xml
@@ -21,5 +21,10 @@
             <version>3.5.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+        </dependency>
     </dependencies>
 </project>
