--- a/myspringcloud/my-spring-cloud-eureka-7001/pom.xml
+++ b/myspringcloud/my-spring-cloud-eureka-7001/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-            <version>2.1.1.RELEASE</version>
+            <!--            <version>2.1.1.RELEASE</version>-->
         </dependency>
 
 
