--- a/myspringcloud/my-spring-cloud-provider-dept-8001/src/main/resources/application.yml
+++ b/myspringcloud/my-spring-cloud-provider-dept-8001/src/main/resources/application.yml
@@ -15,9 +15,23 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/cloudDB01
     username: root
-    password: password
+    password: mysqlzxy1126.
     dbcp2:
       min-idle: 5 # 数据库连接池的最小维持连接数
       initial-size: 5 #初始化连接数
       max-total: 5  #最大连接数
       max-wait-millis: 200 # 等待连接获取的最大超时时间
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:7001/eureka
+  instance:
+    instance-id: myspringcloud-dept8001 #服务名称修改
+    prefer-ip-address: true
+
+info:
+  app.name: xiaoyuu-myspringcloud
+  company.name: www.xiaoyuu.me
+  build.artifactId: $project.artifactId$
+  build.version: ${project.version}
