--- a/myspringcloud/pom.xml
+++ b/myspringcloud/pom.xml
@@ -13,6 +13,7 @@
         <module>my-spring-cloud-consumer-dept-80</module>
         <module>my-spring-cloud-eureka-7001</module>
         <module>my-spring-cloud-consumer-dept-feign</module>
+        <module>my-spring-cloud-provider-dept-hystrix-8001</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -88,7 +89,7 @@
         </dependencies>
     </dependencyManagement>
     <build>
-        <finalName>myspringcloud</finalName>
+        <finalName>me.xiaoyuu.myspringcloud</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
